Design overhaul + slight function change
Webpage structure changed, main page made more minimalistic, background colours changed to a darker and lighter shade of black.

--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html id="theme-dark">
+<html>
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="favicon.png">
+        <link rel="icon" href="../favicon.png">
         <meta property="og:title" content="ph3b3">
         <meta property="og:description" content="ph3b3 : web designer, developer, musician">
         <meta property="og:image" content="favicon.png">
@@ -12,10 +12,10 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="mobile.css">
 
-        <script src="script.js"></script>
-        <script src="mobile.js"></script>
+        <script src="../script.js"></script>
 
         <title>ph3b3</title>
     </head>
@@ -23,11 +23,11 @@
         <main>
             <center>
                 <ul id="home">
-                    <a href="about.html">about</a>
-                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
-                    <a href="https://github.com/phoebe-leong/phoebe-leong.github.io" target="_blank">github</a>
-                    <a href="socials.html">socials</a>
-                    <a href="stories.html">stories</a>
+                    <a href="../about.html">about</a><br><br>
+                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a><br><br>
+                    <a href="https://github.com/phoebe-leong/phoebe-leong.github.io" target="_blank">github</a><br><br>
+                    <a href="../socials.html">socials</a><br><br>
+                    <a href="../stories.html">stories</a>
                 </ul>
             </center>
         </main>
