--- a/stories.html
+++ b/stories.html
@@ -3,39 +3,26 @@
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="favicon.png">
-        <link rel="stylesheet" href="style.css">
 
-        <script src="theme.js"></script>
-        <script>
-            window.onload = function() {
-                loadThemes()
-            }
-        </script>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ph3b3 - stories</title>
+        <title>ph3b3's stories</title>
     </head>
     <body>
         <main>
-            <nav id="navbar">
+            <h1>ph3b3's stories.</h1>
+            <section>
                 <ul>
-                    <a href="/">home</a>
-                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
-                    <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
-                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
-                    <a href="stories.html">stories</a>
-
-                    <a id="theme-button" onclick="toggle()">change theme</a>
-                </ul>
-            </nav><br><br><br><br><br>
-            <h2>Stories</h2>
-            <ul>
-                <a href="stories/samandgreta.html">sam and greta</a><br><br>
-                <a href="stories/redpandawithbrownhair.html">the red panda with brown hair</a><br><br>
-                <a href="stories/theinvisiblegirl.html">the invisible girl</a><br><br>
-                <a href="stories/destructionofearth.html">the destruction of earth as we know it</a><br><br>
-                <a href="stories/theknifewithagirl.html">the knife with a girl</a>
-            </ul>
+                    <li><a href="stories/samandgreta.html">sam and greta</a></li>
+                    <li><a href="stories/redpandawithbrownhair.html">the red panda with brown hair</a></li>
+                    <li><a href="stories/theinvisiblegirl.html">the invisible girl</a></li>
+                    <li><a href="stories/destructionofearth.html">the destruction of earth as we know it</a></li>
+                    <li><a href="stories/theknifewithagirl.html">the knife with a girl</a></li>
+                </ul><br>
+                <p>More current publications can be found on my <a href="https://www.wattpad.com/user/phoebeleong8" target="_blank">Wattpad</a></p>
+            </section>
         </main>
     </body>
 </html>
