--- a/stories/theknifewithagirl.html
+++ b/stories/theknifewithagirl.html
@@ -2,43 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>the knife with a girl</title>
+        <title>ph3b3's story</title>
         <link rel="icon" href="../favicon.png">
-        <link rel="stylesheet" href="../style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="../theme.js"></script>
-        <script>
-            window.onload = function() {
-                loadThemes()
-            }
-        </script>
+        <link rel="stylesheet" href="../style.css">
+        <script src="../script.js"></script>
     </head>
     <body>
         <main>
-            <nav>
-                <ul>
-                    <a href="/">home</a>
-                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
-                    <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
-                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
-                    <a href="../stories.html">stories</a>
-
-                    <a id="theme-button" onclick="toggle()">change theme</a>
-                </ul>
-            </nav><br><br><br><br><br>
-            <h2>
-                The knife with a girl
-            </h2>
-            <p>
-                Follow the story of a young girl trying to get along in life while commiting<br>what appears to be random mass-murders<br>
-                Genre: Fiction<br><br>
-
-                <a href="pdfs/theknifewithagirl.pdf">
-                    <button>
-                        Read
-                    </button>
-                </a>
-            </p>
+            <h1>the knife with a girl.</h1>
+            <section>
+                <p>
+                    Follow the story of a young girl trying to get along in life while commiting<br>what appears to be random mass-murders.<br><br>
+                    Genre: Fantasy
+                </p>
+                <button onclick="newTab('pdfs/theknifewithagirl.pdf')">Read</button>
+            </section>
         </main>
     </body>
 </html>
