--- a/stories/destructionofearth.html
+++ b/stories/destructionofearth.html
@@ -2,43 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>destruction of earth as we know it</title>
+        <title>ph3b3's story</title>
         <link rel="icon" href="../favicon.png">
-        <link rel="stylesheet" href="../style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="../theme.js"></script>
-        <script>
-            window.onload = function() {
-                loadThemes()
-            }
-        </script>
+        <link rel="stylesheet" href="../style.css">
+        <script src="../script.js"></script>
     </head>
     <body>
         <main>
-            <nav>
-                <ul>
-                    <a href="/">home</a>
-                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
-                    <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
-                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
-                    <a href="../stories.html">stories</a>
-
-                    <a id="theme-button" onclick="toggle()">change theme</a>
-                </ul>
-            </nav><br><br><br><br><br>
-            <h2>
-                The destruction of Earth as we know it
-            </h2>
-            <p>
-                Follow two university students as the attempt to save the world by making a time machine<br>
-                Genre: Science Fiction<br><br>
-
-                <a href="pdfs/thedestructionofearth.pdf">
-                    <button>
-                        Read
-                    </button>
-                </a>
-            </p>
+            <h1>the destruction of earth<br>as we know it.</h1>
+            <section>
+                <p>
+                    Follow two university students as they attempt to save the world by making a time machine.<br><br>
+                    Genre: Science Fiction
+                </p>
+                <button onclick="newTab('pdfs/thedestructionofearth.pdf')">Read</button>
+            </section>
         </main>
     </body>
 </html>
