--- a/stories/redpandawithbrownhair.html
+++ b/stories/redpandawithbrownhair.html
@@ -2,41 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>red panda with brown hair</title>
+        <title>ph3b3's story</title>
         <link rel="icon" href="../favicon.png">
-        <link rel="stylesheet" href="../style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="../theme.js"></script>
-        <script>
-            window.onload = function() {
-                loadThemes()
-            }
-        </script>
+        <link rel="stylesheet" href="../style.css">
+        <script src="../script.js"></script>
     </head>
     <body>
         <main>
-            <nav>
-                <ul>
-                    <a href="/">home</a>
-                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
-                    <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
-                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
-                    <a href="../stories.html">stories</a>
-
-                    <a id="theme-button" onclick="toggle()">change theme</a>
-                </ul>
-            </nav><br><br><br><br><br>
-            <h2>
-                The red panda with brown hair
-            </h2>
-            <p>
-            A 14 year old girl has a crush on a 16 year old girl at her school and wants to ask her a few questions about life, the universe, and everything. But first she has to come out of the bushes<br>
-            Genre: Romance</p>
-            <a href="pdfs/redpandawithbrownhair.pdf">
-                <button>
-                    Read
-                </button>
-            </a>
+            <h1>the red panda with<br>brown hair.</h1>
+            <section>
+                <p>
+                    A 14 year old girl has a crush on another girl at her school and<br>wants to ask her a few questions about life, the universe, and   everything.<br>But first she has to come out of the bushes.<br><br>
+                    Genre: Romance
+                </p>
+                <button onclick="newTab('pdfs/redpandawithbrownhair.pdf')">Read</button>
+            </section>
         </main>
     </body>
 </html>
