--- a/stories/theinvisiblegirl.html
+++ b/stories/theinvisiblegirl.html
@@ -2,42 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>the invisible girl</title>
+        <title>ph3b3's story</title>
         <link rel="icon" href="../favicon.png">
-        <link rel="stylesheet" href="../style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="../theme.js"></script>
-        <script>
-            window.onload = function() {
-                loadThemes()
-            }
-        </script>
+        <link rel="stylesheet" href="../style.css">
+        <script src="../script.js"></script>
     </head>
     <body>
         <main>
-            <nav>
-                <ul>
-                    <a class="navlink" href="/">home</a>
-                    <a class="navlink" href="https://soundcloud.com/ph3b3" target="_blank">music</a>
-                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
-                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
-                    <a class="navlink" href="../stories.html">stories</a>
-
-                    <a id="theme-button" onclick="toggle()">change theme</a>
-                </ul>
-            </nav><br><br><br><br><br>
-            <h2>
-                The invisible girl
-            </h2>
-            <p>
-                Read this gentle understanding story about the "invisible" Phoebe and her developing friendship and love<br>
-                Genre: Romance<br><br>
-                <a href="pdfs/theinvisiblegirl.pdf">
-                    <button>
-                        Read
-                    </button>
-                </a>
-            </p>
+            <h1>the invisible girl.</h1>
+            <section>
+                <p>
+                    Read this gentle, understanding story about the "invisible" Phoebe and<br>her developing friendship and love.<br><br>
+                    Genre: Romance
+                </p>
+                <button onclick="newTab('pdfs/theinvisiblegirl.pdf')">Read</button>
+            </section>
         </main>
     </body>
 </html>
