update social links

--- a/socials.html
+++ b/socials.html
@@ -15,10 +15,10 @@
 		<h1>ph3b3's socials.</h1>
 		<section>
 			<ul>
-				<li class="socials" onclick="newTab('https://www.youtube.com/channel/UCcg_c19cWOWMpWdutMWNrXg')">YouTube</li>
+				<li class="socials" onclick="newTab('https://www.youtube.com/@ph03beuwu')">YouTube</li>
 				<li class="socials" onclick="newTab('https://www.github.com/phoebe-leong')">Github</li>
 				<li class="socials" onclick="newTab('https://www.deviantart.com/ph3bee')">Deviantart</li>
-				<li class="socials" onclick="newTab('https://www.instagram.com/ph03bethemusicgirl/')">Instagram</li>
+				<li class="socials" onclick="newTab('https://www.instagram.com/ph03beuwu/')">Instagram</li>
 			</ul><br>
 		</section>
 	</body>
