--- a/socials.html
+++ b/socials.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li class="socials" onclick="newTab('https://www.youtube.com/@ph03beuwu')">YouTube</li>
 				<li class="socials" onclick="newTab('https://www.github.com/phoebe-leong')">Github</li>
-				<li class="socials" onclick="newTab('https://www.deviantart.com/ph3bee')">Deviantart</li>
+				<!-- <li class="socials" onclick="newTab('https://www.deviantart.com/ph3bee')">Deviantart</li> -->
 				<li class="socials" onclick="newTab('https://www.instagram.com/ph03beuwu/')">Instagram</li>
 			</ul><br>
 		</section>
