--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="theme-dark">
+<html>
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="favicon.png">
