--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <center>
                 <ul id="home">
                     <a href="about.html">about</a>
-                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
+                    <a href="music.html" target="_blank">music</a>
                     <a href="https://github.com/phoebe-leong/phoebe-leong.github.io" target="_blank">github</a>
                     <a href="socials.html">socials</a>
                     <a href="stories.html">stories</a>
