--- a/socials.html
+++ b/socials.html
@@ -7,7 +7,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="style.css">
-		<script src="script.js"></script>
 
 		<title>socials</title>
 	</head>
@@ -15,10 +14,9 @@
 		<h1>ph3b3's socials.</h1>
 		<section>
 			<ul>
-				<li class="socials" onclick="newTab('https://www.youtube.com/@ph03beuwu')">YouTube</li>
-				<li class="socials" onclick="newTab('https://www.github.com/phoebe-leong')">Github</li>
-				<!-- <li class="socials" onclick="newTab('https://www.deviantart.com/ph3bee')">Deviantart</li> -->
-				<li class="socials" onclick="newTab('https://www.instagram.com/ph03beuwu/')">Instagram</li>
+				<li><a href="https://www.youtube.com/@ph03beuwu" target="_blank">YouTube</a></li>
+				<li><a href="https://www.github.com/phoebe-leong" target="_blank">Github</a></li>
+				<li><a href="https://www.instagram.com/ph03beuwu/" target="_blank">Instagram</a></li>
 			</ul><br>
 		</section>
 	</body>
